pkl-core/src/test/files/LanguageSnippetTests/input/errors/keywordNotAllowedHere3.pkl
res1 = outer.outer
res2 = 42